@@ -1,5 +1,8 @@
 2008-09-07  Jeffrey Stedfast  <fejj@novell.com>
 
+	* util/cache.c: Updated to use GSlice instead of a custom MemChunk
+	allocator.
+
 	* util/gtrie.c: Updated to use GSlice instead of my custom
 	MemChunk. The main purpose of using MemChunk had been for ease of
 	cleanup, but it made it more difficult to use GTrie elsewhere.
